# auto-mortgage-uw

./: GENERATED_MANIFEST.md  README_AUTO.md
generated_advanced/: .env.example  .gitignore  API.md  ARCHITECTURE.md  DATABASE.md  Makefile  QUALITY_REPORT.md  README.md  pyproject.toml  requirements-dev.txt  requirements.txt
generated_advanced/.github/workflows/: pipeline.yml
generated_advanced/alembic/versions/: 20260304010102_authentication_and_user_manage.py  20260304010403_authentication_and_user_manage.py  20260304011255_authentication_and_user_manage.py  20260304013628_underwriting_engine.py  20260304020313_fintrac_compliance.py  20260304163419_authentication_and_user_manage.py  (+38 more)
generated_advanced/config/: development.yml  production.yml
generated_advanced/docker/: Dockerfile  Dockerfile.dev
generated_advanced/docs/: README.md  admin_panel.md  authentication_and_user_manage.md  background_jobs_(celery_+_redi.md  client_intake_and_application.md  client_portal.md  database_migrations_and_seed_d.md  decision_service.md  docker_and_deployment.md  document_management.md  document_processing_transforme.md  fintrac_compliance.md  frontend_react_ui.md  infrastructure_and_deployment.md  lender_comparison_and_submissi.md  messaging_and_conditions.md  orchestrator_service.md  reporting_and_analytics.md  testing_suite.md  underwriting_engine.md  xml_policy_service.md
generated_advanced/mortgage_underwriting/: __init__.py  config.py  logger.py  main.py
generated_advanced/scripts/: seed_data.py  setup.py
generated_advanced/tests/: conftest.py
(+536 files in other folders)
