[build-system]
requires = ["setuptools>=65.0"]
build-backend = "setuptools.build_meta"

[project]
name = "mortgage-underwriting"
version = "1.0.0"
description = "Autonomous-generated Canadian mortgage underwriting system"
authors = [{name = "Autonomous Agents System", email = "agents@mortgage-uw.local"}]
requires-python = ">=3.11"

dependencies = [
    "fastapi==0.109.0",
    "sqlalchemy==2.0.23",
    "pydantic==2.5.0",
    "python-jose[cryptography]==3.3.0",
    "passlib[bcrypt]==1.7.4",
    "python-multipart==0.0.6",
    "alembic==1.12.1",
    "psycopg2-binary==2.9.10",
]

[project.optional-dependencies]
dev = [
    "pytest==7.4.3",
    "pytest-cov==4.1.0",
    "pytest-asyncio==0.21.1",
    "black==23.11.0",
    "flake8==6.1.0",
    "mypy==1.7.1",
    "isort==5.13.2",
]
